--- a/Timeu/de.lproj/Localizable.strings
+++ b/Timeu/de.lproj/Localizable.strings
@@ -5,7 +5,7 @@
   Created by Sebastian Limbach on 02.10.2017.
   Copyright © 2017 Sebastian Limbach. All rights reserved.
 */
-"HomeVCTitle" = "Übersicht";
+"HomeVCTitle" = "Zeiterfassung";
 "Today" = "Heute";
 "Yesterday" = "Gestern";
 "DeleteActionTitle" = "Löschen";
