Add timesheet record details view

--- a/Timeu/de.lproj/Localizable.strings
+++ b/Timeu/de.lproj/Localizable.strings
@@ -10,4 +10,6 @@
 "Yesterday" = "Gestern";
 "DeleteActionTitle" = "Löschen";
 "DuplicateActionTitle" = "Duplizieren";
-"ActivityRefreshConrolText" = "Ziehen zum aktualisieren";
+"StartTimeTitle" = "Start";
+"EndTimeTitle" = "Ende";
+"WeekOfTheYear" = "Kalenderwoche";
