--- a/Timeu/en.lproj/Localizable.strings
+++ b/Timeu/en.lproj/Localizable.strings
@@ -6,6 +6,7 @@
   Copyright © 2017 Sebastian Limbach. All rights reserved.
 */
 "TimesheetVCTitle" = "Timesheet";
+"SettingsVCTitle" = "Settings";
 "Today" = "Today";
 "Yesterday" = "Yesterday";
 "DeleteActionTitle" = "Delete";
