Add MPL-2.0 license

--- a/Timeu/de.lproj/Localizable.strings
+++ b/Timeu/de.lproj/Localizable.strings
@@ -1,10 +1,15 @@
-/* 
-  Localizable.strings
-  Timeu
+//
+//  Localizable.strings
+//  Timeu
+//
+//  Copyright © 2018 Sebastian Limbach (https://sebastianlimbach.com/).
+//  All rights reserved.
+//
+//  This Source Code Form is subject to the terms of the Mozilla Public
+//  License, v. 2.0. If a copy of the MPL was not distributed with this
+//  file, You can obtain one at https://mozilla.org/MPL/2.0/.
+//
 
-  Created by Sebastian Limbach on 02.10.2017.
-  Copyright © 2017 Sebastian Limbach. All rights reserved.
-*/
 "TimesheetVCTitle" = "Zeiterfassung";
 "SettingsVCTitle" = "Einstellungen";
 "Today" = "Heute";
